# bulk_file_changer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: date_parser.rs  datetime_tag_parser.rs  datetime_tag_writer.rs  main.rs  parser.rs  stats.rs
