[package]
name = "set_date_image_metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
chrono = "0.4.34"
filetime = "0.2"
kamadak-exif = "0.5.5"
