[package]
name = "endara"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
chrono = "0.4.34"
filetime = "0.2"
# kamadak-exif = "0.5.5"
exif = { git = "https://github.com/kamadak/exif-rs.git", rev = "8523b0f06f6fe4f8eb6022d6ae0922f5c1b3477c" }
little_exif = "0.4.0"
lazy_static = "1.5.0"
clap-verbosity-flag = "2.2.1"
log = "0.4.22"
env_logger = "0.11.5"
